--- a/package.json
+++ b/package.json
@@ -1,8 +1,31 @@
 {
+  "name": "poolow",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "axios": "^1.9.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "firebase-admin": "^13.3.0",
-    "firebase-functions": "^6.3.2"
-  }
+    "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mooryq/poolow.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mooryq/poolow/issues"
+  },
+  "homepage": "https://github.com/mooryq/poolow#readme",
+  "description": ""
 }
